# Mizan-platform

./: CONTRIBUTING.md  LICENCE  README.md  core.py  github.workfows.ci.yml  index.ts  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  src.mizan_init_py  tets.test_core.py  tsconfig.json
