[project]
name = "mizan"
version = "0.1.0"
description = "إطار هندسي لتقييم نماذج اللغة الكبيرة بالعربية"
authors = [{name = "Nidal Watfa"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "torch",
    "transformers",
    "datasets",
    "numpy",
    "pandas"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
    "isort"
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
